--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18",
         "vue": "^3.2.31",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "vue-star-rating": "^2.1.0"
     },
     "dependencies": {
         "vue-pdf-embed": "^1.1.1"
