--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-star-rating": "^2.1.0"
     },
     "dependencies": {
+        "@emailjs/browser": "^3.6.2",
         "vue-pdf-embed": "^1.1.1"
     }
 }
